--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "jimp": "^0.2.28",
     "multer": "^1.3.0",
     "body-parser": "^1.17.2",
-    "spatial-noise": "^1.0.0"
+    "random-js": "^1.0.8",
+    "gif-encoder": "^0.6.0"
   },
   "engines": {
     "node": "8.1.x"
